tests/instantiating/range_prop_invalid_type/stderr.golden
error: 'range' property must be of type 'integer or [integer]', current type 'string'
bus.fbd +2:20
   |
 2 | 	C config; range = "str"
   | 	                  ^^^^^
